completed the exercise problems

--- a/Week 2/number guesser/indexStart_Week2.html
+++ b/Week 2/number guesser/indexStart_Week2.html
@@ -9,6 +9,7 @@
 
     <!-- adding functions based on CS50 JS video for Week 2 assignment -->
     <script>
+        alert("hello!")
        
       
 
